Fix filter-container width on smaller screens

--- a/client/components/ReportPage/ReportPage.scss
+++ b/client/components/ReportPage/ReportPage.scss
@@ -24,6 +24,9 @@ $background-green: #1DB954;
   width: 90%;
   max-width: 1400px;
   align-self: center;
+  @media only screen and (max-width: 991px) and (min-width: 768px) {
+    max-width: 90%;
+  }
   > h1 {
     margin-bottom: 1.3em;
     margin-top: 1em !important;
